--- a/ComputerStore/ClientApp/package.json
+++ b/ComputerStore/ClientApp/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.23.2",
     "nan": "^2.14.2",
+    "tailwindcss": "^3.3.3",
     "typescript": "^4.2.4"
   },
   "scripts": {
@@ -48,7 +49,8 @@
     "build": "react-scripts build",
     "test": "cross-env CI=true react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "lint": "eslint ./src/"
+    "lint": "eslint ./src/",
+    "tailwind": "npx tailwindcss -i ./src/TailwindApp.css -o ./src/App.css --watch"
   },
   "eslintConfig": {
     "extends": [
